--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "dataloader": "^1.4.0",
+    "eslint": "^4.19.1",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-server-express": "^1.3.6",
@@ -34,7 +36,6 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
-    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0",
     "nodemon": "^1.17.5"
