--- a/server/package.json
+++ b/server/package.json
@@ -28,11 +28,13 @@
     "graphql-server-express": "^1.3.6",
     "graphql-subscriptions": "^0.5.8",
     "graphql-tools": "^3.0.2",
+    "join-monster": "^2.0.16",
     "jsonwebtoken": "^8.2.2",
     "lodash": "^4.17.10",
     "ngrok": "^3.0.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "pg": "^7.4.3",
     "sequelize": "^4.37.10",
     "subscriptions-transport-ws": "^0.9.9"
   },
