--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "aor-graphql-client": "0.0.1",
     "apollo-client": "^2.3.2",
     "apollo-client-preset": "^1.0.8",
+    "flexboxgrid": "^6.3.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "lodash": "^4.17.10",
     "material-ui": "^0.20.1",
     "react": "^16.4.0",
     "react-apollo": "^1.4.16",
