--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Moaldahoul/Full_Reactjs_Nodejs_GraphQL_Server#readme",
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
