--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,11 @@
     "aor-graphql-client": "0.0.1",
     "apollo-client": "^2.3.2",
     "apollo-client-preset": "^1.0.8",
+    "apollo-link-ws": "^1.0.8",
+    "bootstrap": "^4.1.1",
     "flexboxgrid": "^6.3.1",
     "graphql": "^0.13.2",
+    "graphql-subscriptions": "^0.5.8",
     "graphql-tag": "^2.9.2",
     "lodash": "^4.17.10",
     "material-ui": "^0.20.1",
@@ -18,7 +21,9 @@
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "react-tap-event-plugin": "^3.0.3"
+    "react-tap-event-plugin": "^3.0.3",
+    "subscriptions-transport-ws": "^0.9.11",
+    "webpack-require": "0.0.16"
   },
   "scripts": {
     "start": "react-scripts start",
